[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "aisafepy"
version = "0.1.0"
description = "Capability-based IFC, streaming-native cascaded guardrails, and an eval-to-guardrail compiler for LLM agents."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Vidura Wijekoon", email = "businessaividura@viduraaitech.space" },
]
keywords = [
    "ai-safety",
    "guardrails",
    "prompt-injection",
    "agent-security",
    "information-flow-control",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "typing-extensions>=4.10",
    "anyio>=4.3",
    "opentelemetry-api>=1.24",
    "tenacity>=8.2",
]

[project.optional-dependencies]
stream = [
    "transformers>=4.40",
    "torch>=2.2",
    "numpy>=1.26",
]
probes = [
    "transformers>=4.40",
    "torch>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]
adapt = [
    "scikit-learn>=1.4",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.5",
    "sentence-transformers>=2.6",
    "numpy>=1.26",
]
flow-openai = [
    "openai-agents>=0.0.7",
]
flow-langgraph = [
    "langgraph>=0.0.40",
]
flow-llamaindex = [
    "llama-index-core>=0.10",
]
flow-mcp = [
    "mcp>=0.9",
]
contrib-presidio = [
    "presidio-analyzer>=2.2",
]
contrib-llm-guard = [
    "llm-guard>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "hypothesis>=6.100",
]
all = [
    "aisafepy[stream,probes,adapt,flow-openai,flow-langgraph,flow-llamaindex,flow-mcp]",
]

[project.urls]
Homepage = "https://github.com/Vidura-Wijekoon/aisafepy"
Documentation = "https://github.com/Vidura-Wijekoon/aisafepy#readme"
Repository = "https://github.com/Vidura-Wijekoon/aisafepy"
Issues = "https://github.com/Vidura-Wijekoon/aisafepy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aisafepy"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/policies",
    "/docs",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function calls in default args (used for Pydantic Field)
    "SIM102", # collapsed nested-if is sometimes less readable
    "SIM108", # ternary vs if-else is a style preference
    "SIM117", # combined with statements (sometimes less readable)
    "RUF022", # __all__ ordering is deliberate (grouped by topic)
    "RUF012", # mutable class attributes (we use frozen dataclasses)
    "E741",   # ambiguous variable names ('l' in cluster labels)
    "UP007",  # 'X | Y' vs 'Optional[X]' — keep both for clarity
    "UP045",  # same as above
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "B017", "RUF005", "SIM"]
"examples/*" = ["E402"]
"src/aisafepy/adapt/compile/__init__.py" = ["F821"]  # forward refs to sibling modules
"src/aisafepy/flow/__init__.py" = ["F401"]            # re-exports for the public API

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "gpu: requires a GPU",
    "integration: integration tests touching upstream libs",
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
files = ["src/aisafepy"]

[tool.coverage.run]
source = ["src/aisafepy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
